# deadlock-analytics

./: .dockerignore  .editorconfig  .gitignore  docker-compose.yaml
.github/workflows/: docker-image-api.yaml  docker-image-ingest-worker.yaml  docker-image-scraper.yaml  docker-image.yaml
api/: Dockerfile  pyproject.toml  requirements.txt
api/api/: globs.py  main.py  utils.py
api/api/routers/: v1.py
api/deadlock_analytics_api/: globs.py  main.py  utils.py
api/deadlock_analytics_api/routers/: v1.py
ingest-worker/: Cargo.toml  Dockerfile
ingest-worker/src/: main.rs
ingest-worker/src/models/: clickhouse_match_metadata.rs  enums.rs  match_metadata.rs  mod.rs
migrations/: 00_create_active_matches_table.sql  01_create_finished_matches_view.sql  02_create_match_info_table.sql  03_create_match_player_table.sql
scraper/: Cargo.toml  Dockerfile
scraper/src/: main.rs  migrate.rs
scraper/src/models/: active_match.rs  enums.rs  mod.rs
