[package]
name = "ingest-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
arl = "0.2.0"
clickhouse = { version = "0.12.2", features = ["test-util", "time"] }
rust-s3 = "0.35.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_repr = "0.1.19"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
