[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
clickhouse = { version = "0.12.2", features = ["time"] }
serde = { version = "1.0.210", features = ["derive"] }
time = { version = "0.3.36", features = ["serde"] }
serde_repr = "0.1.19"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
once_cell = "1.19.0"
reqwest = { version = "0.12.7", features = ["json"] }
arl = "0.2.0"
delay_map = "0.4.0"
openssl-sys = { version = "0.9.103" }
csv = "1.3.0"
tokio-postgres = { version = "0.7.12", features = ["with-time-0_3"] }
kdam = "0.5.2"

[[bin]]
name = "scraper"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/migrate.rs"
